--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -44,7 +44,7 @@ body {
 					<div id="wrapper">
 						<div id="login" class="animate form"
 							style="height: 250px; margin-bottom: 0px; padding-bottom: 10px;padding-top: 10px;padding-left: 20px;padding-right: 20px;">
-							<form action="mysuperscript.php" autocomplete="on">
+							<form action="../mypage/mypage.html" autocomplete="on">
 								<h1
 									style="padding-bottom: 0px; height: 38px; border-bottom-width: 0px;">Log
 									in</h1>
