--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -10,6 +10,8 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/tabs.css" />
 		<link rel="stylesheet" type="text/css" href="css/tabstyles.css" />
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">                      
+		
     <script src="js/modernizr.custom.js"></script>
   
 
@@ -63,9 +65,7 @@
 							<br><br>
 							    <div class="input-group">
 								      <input type="text" class="form-control" placeholder=" Search for...         " > 
-								      <button style="width:30px;height:30px;display:online;">
-                      <img src='img/search.jpg' style="width:25px;height:25px;">
-                      </button>
+								      <button style="width:30px;height:30px;display:online;  border-radius: 5px;"><i class="fa fa-search"></i></button>
 								      
 								   <!--      <span class="input-group-btn">
 버튼에 이미지 입히기	<button class="btn btn-default" type="button"> 
