--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
@@ -38,7 +38,7 @@
 							<br>
 							<br>
 									<div class="example">
-							<img src ="img/ex2.jpg" style="width: 200px; height:130px;">
+							<a href="../main/slidesEditor.html"><img src ="img/ex2.jpg" style="width: 200px; height:130px;"></a>
               <img src ="img/ex3.jpg" style="width: 200px; height:130px;">
               <img src ="img/ex2.jpg" style="width: 200px; height:130px;">
 									</div>
