--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -23,31 +23,36 @@
 <script type="text/javascript" src="js/modernizr.custom.11333.js"></script>
 <style>
 body {
-	background: #f9f9f9 url(images/cloth.jpg) repeat top left;
-}
+ 	background: #f8ffff;
+ 	
+ 	/* #f9f9f9 url(../images/sky-383823_1280.jpg) repeat top left; */
+ 
+/*     backgroud : #E1F5A9 url(../lined_paper/lined_paper.png) repeat top left;
+ */ }
 .fa {
-color : red;
+color : white;
 }
+
 </style>
 </head>
 <body>
 	<div class="container">
 		<div id="ss-links" class="ss-links">
-			<a href="#zero">login</a><br><br> 
-			<a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i class="fa fa-line-chart "></i></a> <a href="#fourth"><i class="fa fa-share-alt"></i></a> <a href="#fifth">f</a>
+			<a href="#zero" 'style= color: white;'>login</a><br><br> 
+			<a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i class="fa fa-line-chart "></i></a> <a href="#fourth"><i class="fa fa-share-alt"></i></a> <a href="#fifth"><i class="fa fa-child fa-2x"></i></a>
 		</div>
 		<div id="ss-container" class="ss-container">
 			<div class="ss-row"
 				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 250px;border-top-width: 20px;margin-top: 20px;">
 				<div class="ss-left">
 					<h2 id="zero">Free-sentation<br>
-                                    produce, presentation in free</h2>
+                           <span style='font-size: 70%;'>produce, present in freedom</span></h2>
 				</div>
 				<div class="ss-right">
 
 					<div id="wrapper">
 						<div id="login" class="animate form"
-							style="height: 250px; margin-bottom: 0px; padding-bottom: 10px;padding-top: 10px;padding-left: 20px;padding-right: 20px;">
+							style="height: 250px; margin-top : 50px; margin-bottom: 0px; padding-bottom: 10px;padding-top: 10px;padding-left: 20px;padding-right: 20px;">
 							<form action="../mypage/mypage.html" autocomplete="on">
 								<h1
 									style="padding-bottom: 0px; height: 38px; border-bottom-width: 0px;">Log
@@ -140,7 +145,7 @@ color : red;
 				</div>
 				<div class="ss-right">
 					<h3>
-						<span>5번</span> <a>아오 더이상 지어낼 뻥이 없다. </a>
+						<span>5번</span> <a>짱짱 프렌테이션 </a>
 					</h3>
 				</div>
 			</div>
