--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -53,7 +53,7 @@
 							   <div class="example">
 				              <img src ="img/ex2.jpg" style="width: 200px; height:130px;">
 				              <img src ="img/ex3.jpg" style="width: 200px; height:130px;">
-				              <img src ="img/ex2.jpg" style="width: 200px; height:130px;">
+				              <a href="../qna/qna.html"><img src ="img/ex2.jpg" style="width: 200px; height:130px;"></a>
                   </div>
                     <br>
                     <br>
