--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -11,7 +11,8 @@
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Kelly+Slab'
 	rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="css/login-demo.css" />
 <link rel="stylesheet" type="text/css" href="css/login.css" />
 <link rel="stylesheet" type="text/css"
@@ -23,62 +24,40 @@
 <script type="text/javascript" src="js/modernizr.custom.11333.js"></script>
 <style>
 body {
- 	background: #f8ffff;
- 	
- 	/* #f9f9f9 url(../images/sky-383823_1280.jpg) repeat top left; */
- 
-/*     backgroud : #E1F5A9 url(../lined_paper/lined_paper.png) repeat top left;
- */ }
-.fa {
-color : white;
-}
+				background: url(./images/background.jpg) no-repeat center center fixed;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+			}
 
+.fa {
+	color: white;
+}
 </style>
 </head>
 <body>
 	<div class="container">
 		<div id="ss-links" class="ss-links">
-			<a href="#zero" 'style= color: white;'>login</a><br><br> 
-			<a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i class="fa fa-line-chart "></i></a> <a href="#fourth"><i class="fa fa-share-alt"></i></a> <a href="#fifth"><i class="fa fa-child fa-2x"></i></a>
+			<a href="#zero" 'style=color:white;'>login</a><br>
+			<br> <a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a
+				href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i
+				class="fa fa-line-chart "></i></a> <a href="#fourth"><i
+				class="fa fa-share-alt"></i></a> <a href="#fifth"><i
+				class="fa fa-child fa-2x"></i></a>
 		</div>
-		<div id="ss-container" class="ss-container">
+		<div id="ss-container" class="ss-container"
+			style="padding-bottom: 120px;">
 			<div class="ss-row"
-				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 250px;border-top-width: 20px;margin-top: 20px;">
+				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 250px; border-top-width: 20px; margin-top: 20px;">
 				<div class="ss-left">
-					<h2 id="zero">Free-sentation<br>
-                           <span style='font-size: 70%;'>produce, present in freedom</span></h2>
+					<h2 id="zero">
+						Free-sentation<br> <span style='font-size: 70%;'>produce,
+							present in freedom</span>
+					</h2>
 				</div>
 				<div class="ss-right">
-
-					<div id="wrapper">
-						<div id="login" class="animate form"
-							style="height: 250px; margin-top : 50px; margin-bottom: 0px; padding-bottom: 10px;padding-top: 10px;padding-left: 20px;padding-right: 20px;">
-							<form action="../mypage/mypage.html" autocomplete="on">
-								<h1
-									style="padding-bottom: 0px; height: 38px; border-bottom-width: 0px;">Log
-									in</h1>
-								<p>
-									<label for="username" class="uname" data-icon="u">
-										Google ID </label> <input id="username" name="username"
-										required="required" type="text" placeholder="Google ID" />
-								</p>
-								<p>
-									<label for="password" class="youpasswd" data-icon="p">
-										password </label> <input id="password" name="password"
-										required="required" type="password" placeholder="password" />
-								</p>
-								<p class="keeplogin">
-									<input type="checkbox" name="loginkeeping" id="loginkeeping"
-										value="loginkeeping" style="width: 20px;" /> <label
-										for="loginkeeping">Keep me logged in</label>
-								</p>
-								<p class="login button">
-									<input type="submit" value="Login"
-										style="margin-top: 0px; margin-bottom: 0px; padding-bottom: 3px; padding-top: 3px; padding-left: 1px; padding-right: 1px; width: 100px;" />
-								</p>
-							</form>
-						</div>
-					</div>
+					<img src="./images/Googlelogo.png" width="400" height="200">
 				</div>
 			</div>
 			<div class="ss-row ss-medium">
@@ -89,18 +68,18 @@ color : white;
 				</div>
 				<div class="ss-right">
 					<h3>
-					<span>Web-Controller</span>
-                         <a> 프레젠테이션을 자유롭게!<br> 
-                              핸드폰 App Controller 지원</a>					
+						<span>Web-Controller</span> <a> 프레젠테이션을 자유롭게!<br> 핸드폰 App
+							Controller 지원
+						</a>
 					</h3>
 				</div>
 			</div>
 			<div class="ss-row ss-large">
 				<div class="ss-left">
-					<h3>   
-					<span>Web-Editor</span> 
-                        <a> 프로그램 설치에서 자유롭게! <br>
-                                  웹에서 편집, 제작하는 프레젠테이션</a>
+					<h3>
+						<span>Web-Editor</span> <a> 프로그램 설치에서 자유롭게! <br> 웹에서 편집,
+							제작하는 프레젠테이션
+						</a>
 					</h3>
 				</div>
 				<div class="ss-right">
@@ -117,18 +96,18 @@ color : white;
 				</div>
 				<div class="ss-right">
 					<h3>
-					<span>Web-Viewer</span> 
-                        <a> USB없이 자유롭게! <br>
-                              이메일 로그인만으로 프레젠테이션</a>
+						<span>Web-Viewer</span> <a> USB없이 자유롭게! <br> 이메일 로그인만으로
+							프레젠테이션
+						</a>
 					</h3>
 				</div>
 			</div>
 			<div class="ss-row ss-medium">
 				<div class="ss-left">
 					<h3>
-						<span>Presentation-Share</span> 
-						<a>다양한 디자인과 정보의 <br>
-						          프레젠테이션 공유 지원</a>
+						<span>Presentation-Share</span> <a>다양한 디자인과 정보의 <br>
+							프레젠테이션 공유 지원
+						</a>
 					</h3>
 				</div>
 				<div class="ss-right">
