--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -24,23 +24,53 @@
 <script type="text/javascript" src="js/modernizr.custom.11333.js"></script>
 <style>
 body {
-				background: url(./images/background.jpg) no-repeat center center fixed;
-				-webkit-background-size: cover;
-				-moz-background-size: cover;
-				-o-background-size: cover;
-				background-size: cover;
-			}
+	background: url(./images/background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
 
 .fa {
 	color: white;
 }
+
+#customBtn {
+      display: inline-block;
+      background: #cc3732;
+      color: white;
+      width: 175px;
+      border-radius: 5px;
+    }
+    #customBtn:hover {
+      background: #e74b37;
+      cursor: hand;
+    }
+    span.label {
+      font-weight: bold;
+    }
+    span.icon {
+      background: url('https://google-developers.appspot.com/+/images/branding/btn_red_32.png') transparent 10px 50% no-repeat;
+      display: inline-block;
+      vertical-align: middle;
+      width: 40px;
+      height: 40px;
+    }
+    span.buttonText {
+      display: inline-block;
+      vertical-align: middle;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+
+
 </style>
 </head>
 <body>
 	<div class="container">
 		<div id="ss-links" class="ss-links">
-			<a href="#zero" 'style=color:white;'>login</a><br>
-			<br> <a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a
+			<a href="#zero" 'style="color: white;"'>login</a><br> <br>
+			<a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a
 				href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i
 				class="fa fa-line-chart "></i></a> <a href="#fourth"><i
 				class="fa fa-share-alt"></i></a> <a href="#fifth"><i
@@ -57,76 +87,79 @@ body {
 					</h2>
 				</div>
 				<div class="ss-right">
-					<img src="./images/Googlelogo.png" width="400" height="200">
+  <div id="customBtn" class="customGPlusSignIn">
+    <span class="icon"></span>
+    <span class="buttonText">Google</span>
+  </div>
 				</div>
 			</div>
-			<div class="ss-row ss-medium">
-				<div class="ss-left">
-					<h2 id="first">
-						<a class="ss-circle ss-circle-1"></a>
-					</h2>
-				</div>
-				<div class="ss-right">
-					<h3>
-						<span>Web-Controller</span> <a> 프레젠테이션을 자유롭게!<br> 핸드폰 App
-							Controller 지원
-						</a>
-					</h3>
-				</div>
+		</div>
+		<div class="ss-row ss-medium">
+			<div class="ss-left">
+				<h2 id="first">
+					<a class="ss-circle ss-circle-1"></a>
+				</h2>
 			</div>
-			<div class="ss-row ss-large">
-				<div class="ss-left">
-					<h3>
-						<span>Web-Editor</span> <a> 프로그램 설치에서 자유롭게! <br> 웹에서 편집,
-							제작하는 프레젠테이션
-						</a>
-					</h3>
-				</div>
-				<div class="ss-right">
-					<h2 id="second">
-						<a class="ss-circle ss-circle-2"></a>
-					</h2>
-				</div>
+			<div class="ss-right">
+				<h3>
+					<span>Web-Controller</span> <a> 프레젠테이션을 자유롭게!<br> 핸드폰 App
+						Controller 지원
+					</a>
+				</h3>
 			</div>
-			<div class="ss-row ss-small">
-				<div class="ss-left">
-					<h2 id="third">
-						<a class="ss-circle ss-circle-3">\</a>
-					</h2>
-				</div>
-				<div class="ss-right">
-					<h3>
-						<span>Web-Viewer</span> <a> USB없이 자유롭게! <br> 이메일 로그인만으로
-							프레젠테이션
-						</a>
-					</h3>
-				</div>
+		</div>
+		<div class="ss-row ss-large">
+			<div class="ss-left">
+				<h3>
+					<span>Web-Editor</span> <a> 프로그램 설치에서 자유롭게! <br> 웹에서 편집,
+						제작하는 프레젠테이션
+					</a>
+				</h3>
 			</div>
-			<div class="ss-row ss-medium">
-				<div class="ss-left">
-					<h3>
-						<span>Presentation-Share</span> <a>다양한 디자인과 정보의 <br>
-							프레젠테이션 공유 지원
-						</a>
-					</h3>
-				</div>
-				<div class="ss-right">
-					<h2 id="fourth">
-						<a class="ss-circle ss-circle-4"></a>
-					</h2>
-				</div>
+			<div class="ss-right">
+				<h2 id="second">
+					<a class="ss-circle ss-circle-2"></a>
+				</h2>
 			</div>
-			<div class="ss-row ss-large">
-				<div class="ss-left">
-					<h2 id="fifth">
-						<a class="ss-circle ss-circle-5"></a>
-					</h2>
-				</div>
-				<div class="ss-right">
-					<h3>
-						<span>5번</span> <a>짱짱 프렌테이션 </a>
-					</h3>
-				</div>
+		</div>
+		<div class="ss-row ss-small">
+			<div class="ss-left">
+				<h2 id="third">
+					<a class="ss-circle ss-circle-3">\</a>
+				</h2>
+			</div>
+			<div class="ss-right">
+				<h3>
+					<span>Web-Viewer</span> <a> USB없이 자유롭게! <br> 이메일 로그인만으로
+						프레젠테이션
+					</a>
+				</h3>
+			</div>
+		</div>
+		<div class="ss-row ss-medium">
+			<div class="ss-left">
+				<h3>
+					<span>Presentation-Share</span> <a>다양한 디자인과 정보의 <br>
+						프레젠테이션 공유 지원
+					</a>
+				</h3>
+			</div>
+			<div class="ss-right">
+				<h2 id="fourth">
+					<a class="ss-circle ss-circle-4"></a>
+				</h2>
+			</div>
+		</div>
+		<div class="ss-row ss-large">
+			<div class="ss-left">
+				<h2 id="fifth">
+					<a class="ss-circle ss-circle-5"></a>
+				</h2>
+			</div>
+			<div class="ss-right">
+				<h3>
+					<span>5번</span> <a>짱짱 프렌테이션 </a>
+				</h3>
 			</div>
 		</div>
 	</div>
@@ -415,6 +448,25 @@ body {
 			$sidescroll.init();
 
 		});
-	</script>
+		
+		 <!-- 이 비동기 자바스크립트를 </body> 태그 앞에 배치 -->
+		  (function() {
+		    var po = document.createElement('script');
+		    po.type = 'text/javascript'; po.async = true;
+		    po.src = 'https://apis.google.com/js/client:plusone.js?onload=render';
+		    var s = document.getElementsByTagName('script')[0];
+		    s.parentNode.insertBefore(po, s);
+		  })();
+
+		  function render() {
+		    gapi.signin.render('customBtn', {
+		      //'callback': 'signinCallback',
+		      'clientid': '841077041629.apps.googleusercontent.com',
+		      'cookiepolicy': 'single_host_origin',
+		      'requestvisibleactions': 'http://schemas.google.com/AddActivity',
+		      'scope': 'https://www.googleapis.com/auth/plus.login'
+		    });
+		  }
+		  </script>
 </body>
 </html>
