--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -82,11 +82,10 @@
  
   <nav>
     <ul class="cd-secondary-nav">
-      <li><a href="#0">Log In</a></li>
+      <li><a href="../firstpage/firstpage.html">Log In</a></li>
       <li><a href="#0">Home</a></li>
     </ul>
   </nav> <!-- cd-nav -->
- 
   <a class="cd-primary-nav-trigger" href="#0">
     <span class="cd-menu-text">Menu</span><span class="cd-menu-icon"></span>
   </a> <!-- cd-primary-nav-trigger -->
