--- a/web4test/src/main/webapp/firstpage/index2.html
+++ b/web4test/src/main/webapp/firstpage/index2.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<div id="fb-root"></div>
+<div id="fb-root" onclick="FB.login();">asdf</div>
 <fb:login-button scope="public_profile,publish_actions,email,user_likes" onlogin="checkLoginState();">
 </fb:login-button>
 <!--  <div class="fb-login-button" data-max-rows="1" data-size="medium"
