--- a/web4test/src/main/webapp/firstpage/index2.html
+++ b/web4test/src/main/webapp/firstpage/index2.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<div id="fb-root" onclick="FB.login();">asdf</div>
+<div id="fb-root" onclick="FBLogin()();">asdf</div>
 <fb:login-button scope="public_profile,publish_actions,email,user_likes" onlogin="checkLoginState();">
 </fb:login-button>
 <!--  <div class="fb-login-button" data-max-rows="1" data-size="medium"
@@ -47,11 +47,17 @@ var accessToken, expiresIn, signedRequest, userID;
 	    version    : 'v2.3' // use version 2.3
 	  });
 	  
-    FB.getLoginStatus(function(response) {
+/*     FB.getLoginStatus(function(response) {
       statusChangeCallback(response);
-    });
+    }); */
 	  
   };
+  
+  function FBLogin() {
+ 	  FB.login(function() {
+ 		 checkLoginState();
+ 	  });
+  }
   
   function checkLoginState() {
     FB.getLoginStatus(function(response) {
