--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -56,7 +56,7 @@ body {
 					<div style="padding-left: 23%;">
 						<div
 							style="display: inline; width: 100px; height: 100px; padding: 7.5px;">
-							<span> <a> <img src="./images/naver.PNG" width="100"
+							<span> <a href="http://192.168.10.2:9999/web4test/naverLogin.do"> <img src="./images/naver.PNG" width="100"
 									height="100" style="float: center; width: 85px; height: 85px;">
 							</a>
 							</span>
