--- a/web4test/src/main/webapp/login.html
+++ b/web4test/src/main/webapp/login.html
@@ -57,9 +57,11 @@ body {
         </div>
         <div class="ss-right">
           <div style="padding-left: 23%;">
-            <div class="naverBtn"
+          <div class="naverBtn"
               style="display: inline; width: 100px; height: 100px; padding: 7.5px;">
-              <span> <a> <img src="./images/login/naver.PNG" width="100"
+              <span> <a href="http://192.168.10.2:9999/web4test/naverLogin.do" 
+                        onclick="window.open(this.href,'_blank','width=800,height=600, scrollbars=yes');return false;">
+               <img src="./firstpage/images/naver.PNG" width="100"
                   height="100" style="float: center; width: 85px; height: 85px;">
               </a>
               </span>
