--- a/web4test/src/main/webapp/firstpage/firstpage.html
+++ b/web4test/src/main/webapp/firstpage/firstpage.html
@@ -7,24 +7,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="shortcut icon" href="../favicon.ico">
-<link rel="stylesheet" type="text/css" href="css/demo.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/login/demo.css" />
+<link rel="stylesheet" type="text/css" href="css/login/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Kelly+Slab'
 	rel='stylesheet' type='text/css' />
 <link rel="stylesheet"
 	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="css/login-demo.css" />
-<link rel="stylesheet" type="text/css" href="css/login.css" />
+<link rel="stylesheet" type="text/css" href="css/login/login-demo.css" />
+<link rel="stylesheet" type="text/css" href="css/login/login.css" />
+<link rel="stylesheet" type="text/css" href="css/login/button.css" />
 <link rel="stylesheet" type="text/css"
-	href="css/login-animate-custom.css" />
+	href="css/login/login-animate-custom.css" />
 
 <!--[if lt IE 9]>
-				<link rel="stylesheet" type="text/css" href="css/styleIE.css" />
-		<![endif]-->
-<script type="text/javascript" src="js/modernizr.custom.11333.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/login/styleIE.css" />
+    <![endif]-->
+<script type="text/javascript" src="js/login/modernizr.custom.11333.js"></script>
+<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <style>
 body {
-	background: url(./images/background.jpg) no-repeat center center fixed;
+	background: url(./images/login/background.jpg) no-repeat center center
+		fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -35,9 +39,9 @@ body {
 <body>
 	<div class="container">
 		<div id="ss-links" class="ss-links">
-			<a href="#zero" 'style="color: white;"'>login</a><br> <br>
-			<a href="#first"><i class="fa fa-mobile fa-2x"></i></a> <a
-				href="#second"><i class="fa fa-upload"></i></a> <a href="#third"><i
+			<a href="#ss-container">TOP</a> <a href="#first"><i
+				class="fa fa-mobile fa-2x"></i></a> <a href="#second"><i
+				class="fa fa-upload"></i></a> <a href="#third"><i
 				class="fa fa-line-chart "></i></a> <a href="#fourth"><i
 				class="fa fa-share-alt"></i></a> <a href="#fifth"><i
 				class="fa fa-child fa-2x"></i></a>
@@ -45,37 +49,47 @@ body {
 		<div id="ss-container" class="ss-container"
 			style="padding-bottom: 120px;">
 			<div class="ss-row"
-				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 250px; border-top-width: 20px; margin-top: 20px;">
+				style="-webkit-perspective: 600px; -webkit-perspective-origin: 50% 0%; height: 350px; border-top-width: 20px;">
 				<div class="ss-left">
-					<h2 id="zero">
-						Free-sentation<br> <span style='font-size: 70%;'>produce,
-							present in freedom</span>
+					<h2>
+						<FONT face="Arial Black"> <br><br>Free-sentation<br> <span
+							style='font-size: 70%;'>produce, present in freedom</span></FONT>
 					</h2>
 				</div>
 				<div class="ss-right">
-					<div style="padding-left: 23%;">
-						<div
+					<div style="padding-left: 70%;">
+						<div class="naverBtn"
 							style="display: inline; width: 100px; height: 100px; padding: 7.5px;">
-							<span> <a href="http://192.168.10.2:9999/web4test/naverLogin.do"> <img src="./images/naver.PNG" width="100"
-									height="100" style="float: center; width: 85px; height: 85px;">
+							<span> <a
+								href="http://192.168.10.2:9999/web4test/naverLogin.do"
+								onclick="window.open(this.href,'_blank','width=800,height=600, scrollbars=yes');return false;">
+									<img src="./images/login/naver.png" width="100" height="100"
+									style="float: center; width: 30px; height: 30px;">
 							</a>
 							</span>
 						</div>
-						<div
+
+						<div class="facebookBtn" onclick="FBLogin();"
 							style="display: inline; width: 100px; height: 100px; padding: 7.5px;">
-							<span> <a> <img src="./images/facebook.png"
-									width="100" height="100"
-									style="float: center; width: 85px; height: 85px;">
+							<span style="cursor: pointer"> <a> <img
+									src="./images/login/facebook.png" width="100" height="100"
+									style="float: center; width: 30px; height: 30px;">
 							</a>
 							</span>
 						</div>
-						<div
+
+						<div id="customBtn" class="customGPlusSignIn googleBtn"
 							style="display: inline; width: 100px; height: 100px; padding: 7.5px;">
-							<span> <a> <img src="./images/google.png" width="100"
-									height="100" style="float: center; width: 85px; height: 85px;">
-							</a>
-							</span>
+							<span style="cursor: pointer"> <a> <img
+									src="./images/login/google.png" width="100" height="100"
+									style="float: center; width: 30px; height: 30px;">
+							</a> <span class="icon"
+								style="display: inline; width: 100px; height: 100px; padding: 7.5px;"></span>
+								<span class="buttonText"
+								style="cursor: pointer; display: inline; width: 100px; height: 100px; padding: 7.5px;"></span></span>
 						</div>
+
+
 					</div>
 				</div>
 			</div>
@@ -87,8 +101,10 @@ body {
 				</div>
 				<div class="ss-right">
 					<h3>
-						<span>Web-Controller</span> <a> 프레젠테이션을 자유롭게!<br> 핸드폰 App
-							Controller 지원
+						<a
+							style="color: #FACC2E; height: 50px; font-family: 'Comic Sans MS';">Web-Controller</a>
+						<a style="font-family: '휴먼엽서체'"> 프레젠테이션을 자유롭게!<br> 핸드폰
+							App Controller 지원
 						</a>
 					</h3>
 				</div>
@@ -96,8 +112,10 @@ body {
 			<div class="ss-row ss-large">
 				<div class="ss-left">
 					<h3>
-						<span>Web-Editor</span> <a> 프로그램 설치에서 자유롭게! <br> 웹에서 편집,
-							제작하는 프레젠테이션
+						<a
+							style="color: #FACC2E; height: 50px; font-family: 'Comic Sans MS';">Web-Editor</a>
+						<a style="font-family: '휴먼엽서체'"> 프로그램 설치에서 자유롭게! <br> 웹에서
+							편집, 제작하는 프레젠테이션
 						</a>
 					</h3>
 				</div>
@@ -115,8 +133,10 @@ body {
 				</div>
 				<div class="ss-right">
 					<h3>
-						<span>Web-Viewer</span> <a> USB없이 자유롭게! <br> 이메일 로그인만으로
-							프레젠테이션
+						<a
+							style="color: #FACC2E; height: 50px; font-family: 'Comic Sans MS';">Web-Viewer</a>
+						<a style="font-family: '휴먼엽서체'"> USB없이 자유롭게! <br> 이메일
+							로그인만으로 프레젠테이션
 						</a>
 					</h3>
 				</div>
@@ -124,8 +144,10 @@ body {
 			<div class="ss-row ss-medium">
 				<div class="ss-left">
 					<h3>
-						<span>Presentation-Share</span> <a>다양한 디자인과 정보의 <br>
-							프레젠테이션 공유 지원
+						<a
+							style="color: #FACC2E; height: 50px; font-family: 'Comic Sans MS';">Presentation-Share</a>
+						<a style="font-family: '휴먼엽서체'">다양한 디자인과 정보의 <br> 프레젠테이션
+							공유 지원
 						</a>
 					</h3>
 				</div>
@@ -143,297 +165,55 @@ body {
 				</div>
 				<div class="ss-right">
 					<h3>
-						<span>5번</span> <a>짱짱 프렌테이션 </a>
+						<a
+							style="color: #FACC2E; height: 50px; font-family: 'Comic Sans MS';">
+							I don't know</a> <a style="font-family: '휴먼엽서체'">짱짱 프렌테이션 </a>
 					</h3>
 				</div>
 			</div>
 		</div>
 	</div>
+	<button id="logout" onclick="testLogout();">logout</button>
 	<script type="text/javascript"
 		src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/login/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="js/login/main_rendering.js"></script>
+	<script type="text/javascript" src="js/login/googleLogin.js"></script>
+	<script src="https://apis.google.com/js/plusone.js"
+		type="text/javascript"></script>
+	<script type="text/javascript" src="js/login/facebookLogin.js"></script>
+	<!-- <script type="text/javascript" src="js/login/naverLogin.js"></script> -->
+
 	<script type="text/javascript">
-		$(function() {
+		function testLogout() {
+			FB.logout(function(response) {
+				// user is now logged out
+				console.log("logout..");
+			});
+			var revokeUrl = 'https://accounts.google.com/o/oauth2/revoke?token='
+					+ access_token;
 
-			var $sidescroll = (function() {
-
-				// the row elements
-				var $rows = $('#ss-container > div.ss-row'),
-				// we will cache the inviewport rows and the outside viewport rows
-				$rowsViewport, $rowsOutViewport,
-				// navigation menu links
-				$links = $('#ss-links > a'),
-				// the window element
-				$win = $(window),
-				// we will store the window sizes here
-				winSize = {},
-				// used in the scroll setTimeout function
-				anim = false,
-				// page scroll speed
-				scollPageSpeed = 2000,
-				// page scroll easing
-				scollPageEasing = 'easeInOutExpo',
-				// perspective?
-				hasPerspective = true,
-
-				perspective = hasPerspective && Modernizr.csstransforms3d,
-				// initialize function
-				init = function() {
-
-					// get window sizes
-					getWinSize();
-					// initialize events
-					initEvents();
-					// define the inviewport selector
-					defineViewport();
-					// gets the elements that match the previous selector
-					setViewportRows();
-					// if perspective add css
-					if (perspective) {
-						$rows.css({
-							'-webkit-perspective' : 600,
-							'-webkit-perspective-origin' : '50% 0%'
-						});
-					}
-					// show the pointers for the inviewport rows
-					$rowsViewport.find('a.ss-circle')
-							.addClass('ss-circle-deco');
-					// set positions for each row
-					placeRows();
-
+			// 비동기 GET 요청을 수행합니다.
+			$.ajax({
+				type : 'GET',
+				url : revokeUrl,
+				async : false,
+				contentType : "application/json",
+				dataType : 'jsonp',
+				success : function(nullResponse) {
+					// 사용자가 연결 해제되었으므로 작업을 수행합니다.
+					// 응답은 항상 정의되지 않음입니다.
+					console.log('logout');
 				},
-				// defines a selector that gathers the row elems that are initially visible.
-				// the element is visible if its top is less than the window's height.
-				// these elements will not be affected when scrolling the page.
-				defineViewport = function() {
-
-					$.extend($.expr[':'], {
-
-						inviewport : function(el) {
-							if ($(el).offset().top < winSize.height) {
-								return true;
-							}
-							return false;
-						}
-
-					});
-
-				},
-				// checks which rows are initially visible 
-				setViewportRows = function() {
-
-					$rowsViewport = $rows.filter(':inviewport');
-					$rowsOutViewport = $rows.not($rowsViewport)
-
-				},
-				// get window sizes
-				getWinSize = function() {
-
-					winSize.width = $win.width();
-					winSize.height = $win.height();
-
-				},
-				// initialize some events
-				initEvents = function() {
-
-					// navigation menu links.
-					// scroll to the respective section.
-					$links.on('click.Scrolling', function(event) {
-
-						// scroll to the element that has id = menu's href
-						$('html, body').stop().animate({
-							scrollTop : $($(this).attr('href')).offset().top
-						}, scollPageSpeed, scollPageEasing);
-
-						return false;
-
-					});
-
-					$(window).on(
-							{
-								// on window resize we need to redefine which rows are initially visible (this ones we will not animate).
-								'resize.Scrolling' : function(event) {
-
-									// get the window sizes again
-									getWinSize();
-									// redefine which rows are initially visible (:inviewport)
-									setViewportRows();
-									// remove pointers for every row
-									$rows.find('a.ss-circle').removeClass(
-											'ss-circle-deco');
-									// show inviewport rows and respective pointers
-									$rowsViewport.each(function() {
-
-										$(this).find('div.ss-left').css({
-											left : '0%'
-										}).end().find('div.ss-right').css({
-											right : '0%'
-										}).end().find('a.ss-circle').addClass(
-												'ss-circle-deco');
-
-									});
-
-								},
-								// when scrolling the page change the position of each row	
-								'scroll.Scrolling' : function(event) {
-
-									// set a timeout to avoid that the 
-									// placeRows function gets called on every scroll trigger
-									if (anim)
-										return false;
-									anim = true;
-									setTimeout(function() {
-
-										placeRows();
-										anim = false;
-
-									}, 10);
-
-								}
-							});
-
-				},
-				// sets the position of the rows (left and right row elements).
-				// Both of these elements will start with -50% for the left/right (not visible)
-				// and this value should be 0% (final position) when the element is on the
-				// center of the window.
-				placeRows = function() {
-
-					// how much we scrolled so far
-					var winscroll = $win.scrollTop(),
-					// the y value for the center of the screen
-					winCenter = winSize.height / 2 + winscroll;
-
-					// for every row that is not inviewport
-					$rowsOutViewport
-							.each(function(i) {
-
-								var $row = $(this),
-								// the left side element
-								$rowL = $row.find('div.ss-left'),
-								// the right side element
-								$rowR = $row.find('div.ss-right'),
-								// top value
-								rowT = $row.offset().top;
-
-								// hide the row if it is under the viewport
-								if (rowT > winSize.height + winscroll) {
-
-									if (perspective) {
-
-										$rowL
-												.css({
-													'-webkit-transform' : 'translate3d(-75%, 0, 0) rotateY(-90deg) translate3d(-75%, 0, 0)',
-													'opacity' : 0
-												});
-										$rowR
-												.css({
-													'-webkit-transform' : 'translate3d(75%, 0, 0) rotateY(90deg) translate3d(75%, 0, 0)',
-													'opacity' : 0
-												});
-
-									} else {
-
-										$rowL.css({
-											left : '-50%'
-										});
-										$rowR.css({
-											right : '-50%'
-										});
-
-									}
-
-								}
-								// if not, the row should become visible (0% of left/right) as it gets closer to the center of the screen.
-								else {
-
-									// row's height
-									var rowH = $row.height(),
-									// the value on each scrolling step will be proporcional to the distance from the center of the screen to its height
-									factor = (((rowT + rowH / 2) - winCenter) / (winSize.height / 2 + rowH / 2)),
-									// value for the left / right of each side of the row.
-									// 0% is the limit
-									val = Math.max(factor * 50, 0);
-
-									if (val <= 0) {
-
-										// when 0% is reached show the pointer for that row
-										if (!$row.data('pointer')) {
-
-											$row.data('pointer', true);
-											$row.find('.ss-circle').addClass(
-													'ss-circle-deco');
-
-										}
-
-									} else {
-
-										// the pointer should not be shown
-										if ($row.data('pointer')) {
-
-											$row.data('pointer', false);
-											$row.find('.ss-circle')
-													.removeClass(
-															'ss-circle-deco');
-
-										}
-
-									}
-
-									// set calculated values
-									if (perspective) {
-
-										var t = Math.max(factor * 75, 0), r = Math
-												.max(factor * 90, 0), o = Math
-												.min(Math.abs(factor - 1), 1);
-
-										$rowL
-												.css({
-													'-webkit-transform' : 'translate3d(-'
-															+ t
-															+ '%, 0, 0) rotateY(-'
-															+ r
-															+ 'deg) translate3d(-'
-															+ t + '%, 0, 0)',
-													'opacity' : o
-												});
-										$rowR
-												.css({
-													'-webkit-transform' : 'translate3d('
-															+ t
-															+ '%, 0, 0) rotateY('
-															+ r
-															+ 'deg) translate3d('
-															+ t + '%, 0, 0)',
-													'opacity' : o
-												});
-
-									} else {
-
-										$rowL.css({
-											left : -val + '%'
-										});
-										$rowR.css({
-											right : -val + '%'
-										});
-
-									}
-
-								}
-
-							});
-
-				};
-
-				return {
-					init : init
-				};
-
-			})();
-
-			$sidescroll.init();
-
-		});
+				error : function(e) {
+					// 오류 처리
+					console.log(e);
+					// 실패한 경우 사용자가 수동으로 연결 해제하게 할 수 있습니다.
+					//https://plus.google.com/apps
+				}
+			});
+		}
 	</script>
+
 </body>
 </html>
