--- a/web4test/src/main/webapp/test/index06.html
+++ b/web4test/src/main/webapp/test/index06.html
@@ -73,7 +73,7 @@
 				</button>
 				<a class="button support short" data-tooltip="Help &amp; feedback"
 					data-tooltip-alignment="r"
-					href="http://help.slides.com/knowledgebase" target="_blank"><span
+					href="http://QNAURL" target="_blank"><span
 					class="icon i-question-mark">QnA</span></a>
 
 				<button class="button more-options">
@@ -119,18 +119,57 @@
 		  <div class="icon add-vertical-slide show" data-tooltip="Add new slide<br>(Hold shift for blank)" data-tooltip-alignment="t" data-tooltip-delay="1500">
 			  <span class="icon i-plus"></span>
 		  </div>
-		  <div class="mode-toolbar mode-toolbar-fragment">
-			  <div class="inner">
-				  <p class="description">Click on elements to turn them into <u data-tooltip="Fragments are invisible until stepped through when you present. Preview to see them in action. The numbers that appear on top of each fragment indicate the order they will appear in." data-tooltip-alignment="b" data-tooltip-maxwidth="355">fragments</u>.</p><button class="button grey done">Done</button></div></div><div class="slide-options" style="left: 1010.5px; top: 193px; margin-left: 0px; margin-top: 0px;"><ul><li class="remove-slide disabled" data-tooltip="Remove current slide" data-tooltip-alignment="l"><span class="icon i-trash-stroke"></span></li><li class="background" data-tooltip="Slide background color" data-tooltip-alignment="l"><span class="icon i-droplet"></span></li><li class="background-image" data-tooltip="Slide background image" data-tooltip-alignment="l"><span class="icon i-image"></span></li><li class="custom-classes disabled" data-tooltip="Slide classes" data-tooltip-alignment="l"><span class="icon i-star"></span></li><li class="fragment" data-tooltip="Create fragments<br>(SHIFT + ALT + F)" data-tooltip-alignment="l"><span class="icon i-bolt"></span></li><li class="notes" data-tooltip="Speaker notes<br>(SHIFT + ALT + N)" data-tooltip-alignment="l"><span class="icon i-book-alt2"></span></li></ul><div class="background-image-menu"><div class="inner"><div class="upload-progress"><span class="spinner centered" data-spinner-state="spinning"><div class="" role="progressbar" style="position: relative; width: 0px; z-index: auto; left: 17px; top: 17px;"><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-0-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-0-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(0deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-1-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-1-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(30deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-2-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-2-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(60deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-3-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-3-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(90deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-4-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-4-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(120deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-5-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-5-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(150deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-6-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-6-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(180deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-7-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-7-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(210deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-8-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-8-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(240deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-9-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-9-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(270deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-10-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-10-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(300deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div><div style="position: absolute; top: -1px; opacity: 0.25; animation-duration: 1s; -webkit-animation: opacity-100-25-11-12 1s linear infinite; animation-timing-function: linear; animation-delay: initial; animation-iteration-count: infinite; animation-direction: initial; animation-fill-mode: initial; animation-play-state: initial; -webkit-animation-play-state: initial; animation-name: opacity-100-25-11-12;"><div style="position: absolute; width: 9px; height: 3px; box-shadow: rgba(0, 0, 0, 0.0980392) 0px 0px 1px; transform-origin: left 50% 0px; transform: rotate(330deg) translate(8px, 0px); border-radius: 1px; background: rgb(255, 255, 255);"></div></div></div></span><span class="label">Uploading...</span></div><div class="upload-output"><div class="thumbnail"></div><div class="background-image-options"><select class="sl-select white background-size"><option value="cover">Stretch</option><option value="contain">Fit</option><option value="initial">Original</option></select><button class="button remove-background">Remove</button></div></div></div></div><div class="overflow-warning" data-tooltip="Please keep content inside of the dotted outline. Content placed outside may not be visible on all display sizes." data-tooltip-maxwidth="300" data-tooltip-alignment="l"><span class="icon i-info"></span></div></div>
-	  </article>
 
-	  <div class='canvas'>
-		  <p>T.T</p>
-	  </div>
+
+	  </article>
 
 	</div>
 
-  <div class="toolbars visible"><div class="toolbars-inner"><div class="toolbars-scroller" style="-webkit-transform: translateX(0px); transform: translateX(0px);"><div class="toolbar visible" data-type="add" style="left: 0px;"><div class="toolbar-list"><div class="toolbar-add-block-option" data-block-type="text"><span class="toolbar-add-block-option-icon icon i-type"></span><span class="toolbar-add-block-option-label">Text</span></div><div class="toolbar-add-block-option" data-block-type="image"><span class="toolbar-add-block-option-icon icon i-picture"></span><span class="toolbar-add-block-option-label">Image</span></div><div class="toolbar-add-block-option" data-block-type="shape"><span class="toolbar-add-block-option-icon icon i-shapes"></span><span class="toolbar-add-block-option-label">Shape</span></div><div class="toolbar-add-block-option" data-block-type="iframe"><span class="toolbar-add-block-option-icon icon i-browser"></span><span class="toolbar-add-block-option-label">Iframe</span></div><div class="toolbar-add-block-option" data-block-type="code"><span class="toolbar-add-block-option-icon icon i-file-css"></span><span class="toolbar-add-block-option-label">Code</span></div><div class="toolbar-add-block-option" data-block-type="math"><span class="toolbar-add-block-option-icon icon i-divide"></span><span class="toolbar-add-block-option-label">Math</span></div></div></div></div></div><div class="toolbars-footer"><a class="promotion-link upgrade-button" data-tooltip="You're using Slides Free.<br>Click to learn more about our Pro features." href="/pricing" target="_blank">Free</a><div class="option editor-settings" data-tooltip="Editor settings"><span class="icon i-equalizer"></span></div></div></div>
+  <div class="toolbars visible">
+	  <div class="toolbars-inner">
+		  <div class="toolbars-scroller" style="-webkit-transform: translateX(0px); transform: translateX(0px);">
+			  <div class="toolbar visible" data-type="add" style="left: 0px;">
+				  <div class="toolbar-list">
+					  <div class="toolbar-add-block-option" data-block-type="text">
+					   	<span class="toolbar-add-block-option-icon icon i-type"></span>
+						<span class="toolbar-add-block-option-label">Text</span>
+					  </div>
+
+					  <div class="toolbar-add-block-option" data-block-type="image">
+						<span class="toolbar-add-block-option-icon icon i-picture"></span>
+						<span class="toolbar-add-block-option-label">Image</span>
+					  </div>
+
+					  <div class="toolbar-add-block-option" data-block-type="shape">
+						  <span class="toolbar-add-block-option-icon icon i-shapes"></span>
+						  <span class="toolbar-add-block-option-label">Shape</span>
+					  </div>
+
+					  <div class="toolbar-add-block-option" data-block-type="iframe">
+						  <span class="toolbar-add-block-option-icon icon i-browser"></span>
+						  <span class="toolbar-add-block-option-label">Iframe</span>
+					  </div>
+
+					  <div class="toolbar-add-block-option" data-block-type="code">
+						  <span class="toolbar-add-block-option-icon icon i-file-css"></span>
+						  <span class="toolbar-add-block-option-label">Code</span>
+					  </div>
+
+					  <div class="toolbar-add-block-option" data-block-type="math">
+						  <span class="toolbar-add-block-option-icon icon i-divide"></span>
+						  <span class="toolbar-add-block-option-label">Math</span>
+					  </div>
+				  </div>
+			  </div>
+		  </div>
+	  </div>
+	  <div class="toolbars-footer">
+		  <a class="promotion-link upgrade-button" data-tooltip="You're using Slides Free.<br>Click to learn more about our Pro features." href="/pricing" target="_blank">Free</a>
+		  <div class="option editor-settings" data-tooltip="Editor settings">
+			  <span class="icon i-equalizer"></span>
+		  </div>
+	  </div>
+  </div>
 
   
 </body>
