--- a/web4test/src/main/webapp/test/index07.html
+++ b/web4test/src/main/webapp/test/index07.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/test03.css">
-	<script src="js/test06DD.js"></script>
+	<script src="js/test07DD.js"></script>
 </head>
 <body>
   <div class='page-wrapper'>
@@ -104,7 +104,7 @@
 		  <!--<div class="reveal-viewport theme-font-montserrat theme-color-beige-brown">-->
 			  <div class="reveal zoom" role="application" data-transition-speed="default" data-background-transition="slide">
 				  <div class="slides" style="width: 960px; height: 700px;">
-					  <section class="overflowing present has-light-background" data-background-color="#d0e0e3" data-id="0279c11631561889345ddf52a9453fd5" style="display: block;" data-index-h="0">
+					  <section class="overflowing present has-light-background" data-background-color="#d0e0e3" data-id="0279c11631561889345ddf52a9453fd5" style="display: block;" data-index-h="0" style="display: block;">
 					  </section>
 				  </div>
 				  <div class="progress" style="display: none;"><span></span></div><aside class="controls" style="display: block;"><div class="navigate-left"></div><div class="navigate-right"></div><div class="navigate-up"></div><div class="navigate-down"></div></aside><div class="slide-number"></div><div class="pause-overlay"></div><div id="aria-status-div" aria-live="polite" aria-atomic="true" style="position: absolute; height: 1px; width: 1px; overflow: hidden; clip: rect(1px 1px 1px 1px);">asdfsadf
