--- a/web4test/src/main/webapp/test/index07.html
+++ b/web4test/src/main/webapp/test/index07.html
@@ -5,6 +5,14 @@
 	<title>web04test</title>
 	<script src="http://code.jquery.com/jquery-1.7.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<!--<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />-->
+	<!--<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>-->
+	<!-- drag & drop plugin -->
+	<script src="http://threedubmedia.com/inc/js/jquery.event.drag-2.2.js"></script>
+	<script src="http://threedubmedia.com/inc/js/jquery.event.drag.live-2.2.js"></script>
+	<script src="http://threedubmedia.com/inc/js/jquery.event.drop-2.2.js"></script>
+	<script src="http://threedubmedia.com/inc/js/jquery.event.drop.live-2.2.js"></script>
+
 
 	<link rel="stylesheet" href="css/test03.css">
 	<script src="js/test07DD.js"></script>
