--- a/web4test/src/main/webapp/mypage/mypage.html
+++ b/web4test/src/main/webapp/mypage/mypage.html
@@ -133,7 +133,7 @@
 							<br>
 							<br>
 									<div class="example">
-							<a href="../main/slidesEditor.html"><img src ="img/ex2.jpg" style="width: 200px; height:130px;"></a>
+							<a href="../test/index07.html"><img src ="img/ex2.jpg" style="width: 200px; height:130px;"></a>
               <img src ="img/ex3.jpg" style="width: 200px; height:130px;">
               <img src ="img/ex2.jpg" style="width: 200px; height:130px;">
 									</div>
